# alonzo

./: .ghc.environment.x86_64-linux-8.4.3  .gitignore  .history  README.md  TODO.md  TUTORIAL.md  cabal.project  language-alonzo.cabal
alci/: Main.hs
language-alonzo/: language-alonzo.cabal
language-alonzo-analysis/: language-alonzo-analysis.cabal
language-alonzo-analysis/src/Language/Alonzo/: Rename.hs
language-alonzo-analysis/src/Language/Alonzo/Rename/: Error.hs
language-alonzo-analysis/src/Language/Alonzo/Syntax/: Bound.hs
language-alonzo-compile/: language-alonzo-compile.cabal
language-alonzo-evaluate/: language-alonzo-evaluate.cabal
language-alonzo-evaluate/executable/: Main.hs
language-alonzo-evaluate/src/Language/Alonzo/: Closure.hs  Eval.hs  Value.hs
language-alonzo-source/: language-alonzo-source.cabal
language-alonzo-source/src/Language/Alonzo/: Lex.x  Parse.hs
language-alonzo-source/src/Language/Alonzo/Lex/: LFCut.hs  Organize.hs
language-alonzo-source/src/Language/Alonzo/Parse/: Grammar.hs  Helpers.hs
language-alonzo-source/src/Language/Alonzo/Syntax/: Source.hs
language-alonzo-source/src/Language/Alonzo/Syntax/Source/: Helpers.hs
language-alonzo/alci/: Main.hs
language-alonzo/alci/Language/Alonzo/Repl/: Error.hs
language-alonzo/src/Language/Alonzo/: Analysis.hs  Eval.hs  Lex.x  Parse.hs  Rename.hs  Transform.hs
language-alonzo/src/Language/Alonzo/Analysis/: Error.hs  NameCheck.hs
language-alonzo/src/Language/Alonzo/Lex/: Linefold.hs  Organize.hs  Token.hs
language-alonzo/src/Language/Alonzo/Parse/: Decl.hs  Error.hs  Grammar.hs  Helpers.hs  TopLevel.hs
language-alonzo/src/Language/Alonzo/Rename/: Error.hs
language-alonzo/src/Language/Alonzo/Repl/: Error.hs
language-alonzo/src/Language/Alonzo/Syntax/: ANF.hs  Bound.hs  Location.hs  Module.hs  Name.hs  Prim.hs  Source.hs
language-alonzo/src/Language/Alonzo/Transform/: ANorm.hs  Bound.hs  CConv.hs  Eval.hs  Lift.hs  Lifted.hs  NameBind.hs  Reduce.hs  Rename.hs
prelude/: Experimental.al  Prelude.al  Untitled-1
src/Language/Alonzo/: Analysis.hs  Lex.x  Parse.hs.old  Parse.y
src/Language/Alonzo/Analysis/: Error.hs  Infer.hs
src/Language/Alonzo/Lex/: Error.hs  Lines.hs  Offside.hs  State.hs  Token.hs
src/Language/Alonzo/Parse/: Grammar.hs  Helpers.hs
src/Language/Alonzo/Syntax/: Builtin.hs  Location.hs  Source.hs
src/Language/Alonzo/Transform/: ANF.hs  Abstract.hs  CConv.hs  Lift.hs  Reduce.hs  WHNF.hs
