name:           language-alonzo-evaluate
version:        0.0.0
synopsis:       Alonzo programming language evaluation library
description:    Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/alonzo
bug-reports:    https://github.com/andgate/alonzo/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/andgate/hawk

library
  default-language: Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  hs-source-dirs:
      src
  build-depends:
      base <5
    , containers
    , language-alonzo-source
    , language-alonzo-analysis
    , mtl
    , prettyprinter
    , text
    , unbound-generics
  exposed-modules:
      Language.Alonzo.Closure
      Language.Alonzo.Eval
      Language.Alonzo.Value
  
  other-modules:

executable alci
  main-is: Main.hs
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts -threaded -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-language: Haskell2010
  hs-source-dirs:
      executable
  build-depends:
      base
    , bifunctors
    , extra
    , language-alonzo-source
    , language-alonzo-analysis
    , language-alonzo-evaluate
    , lens
    , monad-loops
    , mtl
    , prettyprinter
    , text
  
  other-modules:
    Language.Alonzo.Repl.Error