name:           language-alonzo-source
version:        0.0.0
synopsis:       Library for Alonzo source
description:    Purely Functional Untyped Language
category:       Compilers
homepage:       https://github.com/andgate/alonzo
bug-reports:    https://github.com/andgate/alonzo/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    src/Language/Alonzo/Lex.x

source-repository head
  type: git
  location: https://github.com/andgate/alonzo

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      Earley
    , array
    , aeson
    , base <5
    , binary
    , containers
    , lens
    , ListZipper
    , directory
    , filepath
    , extra
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , semigroups
    , text

  build-tools:
      alex ==3.2.4
  exposed-modules:
      Language.Alonzo.Lex
      Language.Alonzo.Lex.Error
      Language.Alonzo.Lex.LFCut
      Language.Alonzo.Lex.Organize
      Language.Alonzo.Lex.State
      Language.Alonzo.Lex.Token
      
      Language.Alonzo.Parse
      Language.Alonzo.Parse.Error
      Language.Alonzo.Parse.Grammar
      Language.Alonzo.Parse.Helpers
      
      Language.Alonzo.Syntax.Location
      Language.Alonzo.Syntax.Name
      Language.Alonzo.Syntax.Prim
      Language.Alonzo.Syntax.Source
      Language.Alonzo.Syntax.Source.Helpers
  
  other-modules:
  default-language: Haskell2010