name:           language-alonzo
version:        0.0.0
synopsis:       Library for Alonzo source
description:    Purely Functional Untyped Language
category:       Compilers
homepage:       https://github.com/andgate/alonzo
bug-reports:    https://github.com/andgate/alonzo/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    src/Language/Alonzo/Lex.x

source-repository head
  type: git
  location: https://github.com/andgate/alonzo

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      Earley
    , array
    , aeson
    , base
    , binary
    , containers
    , lens
    , ListZipper
    , directory
    , filepath
    , either
    , exceptions
    , extra
    , lens
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , semigroups
    , text
    , unbound-generics
    , unordered-containers
    , vector

  build-tools:
      alex ==3.2.4
  exposed-modules:
      Language.Alonzo.Analysis.Error
      Language.Alonzo.Analysis.Infer
      Language.Alonzo.Analysis.NameCheck

      Language.Alonzo.Eval

      Language.Alonzo.Lex
      Language.Alonzo.Lex.Error
      Language.Alonzo.Lex.LFCut
      Language.Alonzo.Lex.Organize
      Language.Alonzo.Lex.State
      Language.Alonzo.Lex.Token
      
      Language.Alonzo.Parse
      Language.Alonzo.Parse.Error
      Language.Alonzo.Parse.Grammar
      Language.Alonzo.Parse.Helpers

      Language.Alonzo.Repl.Error
      
      Language.Alonzo.Syntax.Location
      Language.Alonzo.Syntax.Prim
      Language.Alonzo.Syntax.Source

      Language.Alonzo.Transform.ANorm
      Language.Alonzo.Transform.Bound
      Language.Alonzo.Transform.CConv
      Language.Alonzo.Transform.Lifted
  
  other-modules:
  default-language: Haskell2010

executable alci
  main-is: Main.hs
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts -threaded -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-language: Haskell2010
  hs-source-dirs:
      alci
  build-depends:
      base
    , bifunctors
    , containers
    , extra
    , language-alonzo
    , lens
    , monad-loops
    , mtl
    , prettyprinter
    , text
  
  other-modules:
    Language.Alonzo.Repl.Error